--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "website",
     "tech",
     "coding",
-    "dev"
+    "dev",
+    "data science"
   ],
   "author": "Ryan Fitzgerald",
   "license": "MIT",
